Adjust spacing issue on product page

--- a/homework_5/styles.css
+++ b/homework_5/styles.css
@@ -278,6 +278,7 @@ footer a:hover {
 
 .bun-quantity {
 	display: flex;
+	max-height: 50px;
 }
 
 .bun-quantity h3 {
